Add direct email API v2
